@@ -1,2 +1,16 @@
-/*C1*/SET SCHEMA PUBLIC
+/*C2*/SET SCHEMA PUBLIC
 CONNECT USER SA
+SET AUTOCOMMIT FALSE
+/*C3*/SET SCHEMA PUBLIC
+CONNECT USER SA
+SET AUTOCOMMIT FALSE
+/*C4*/SET SCHEMA PUBLIC
+CONNECT USER SA
+SET AUTOCOMMIT FALSE
+/*C5*/SET SCHEMA PUBLIC
+CONNECT USER SA
+SET AUTOCOMMIT FALSE
+/*C2*/DISCONNECT
+/*C3*/DISCONNECT
+/*C4*/DISCONNECT
+/*C5*/DISCONNECT
